name:                compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compiler#readme
author:              ear7h
-- maintainer:          example@example.com
copyright:           2021 ear7h
category:            Web
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
    Data.Args
  build-depends:       base >= 4.7 && < 5

executable compiler
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Args
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       compiler,
                       hakyll >= 4.13.0.0,
                       blaze-html >= 0.9.1.2,
                       blaze-markup >= 0.8.2.7,
                       markdown >= 0.1.17.4,
                       text >= 1.2.4.0,
                       time >= 1.9.3,
                       directory >= 1.3.6.0,
                       filepath >= 1.4.2.1,
                       binary >= 0.8.8.0,
                       dhall >= 1.32.0,
                       aeson >= 1.4.7.1
